# lamarrs

./: .gitignore  Cargo.toml  README.md  mosquitto_script.sh
.cargo/: cargo.toml
client/: Cargo.toml  Cross.toml  Rpi3bDockerfile
client/src/: client.rs  main.rs  server_handler.rs
client/src/services/: midi.rs  mod.rs  playback.rs  playback_service.rs
docs/: architecture_document.md  index.html  project_charter.md  project_requirements.md  roadmap.md
docs/assets/dioxus/: web-ui.js
docs/assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js
documentation/: project_charter.md  project_requirements.md
lamarrs-utils/: Cargo.toml
lamarrs-utils/src/: action_messages.rs  enums.rs  error.rs  exchange_messages.rs  lib.rs  messages.rs  midi_event.rs  orchestration_messages.rs
mqtt/: Dockerfile  mosquitto.conf
orchestrator/: Cargo.toml
orchestrator/src/: main.rs
releases/: web-ui.wasm
rp-client/: Cargo.toml
rp-client/.cargo/: config.toml
rp-client/src/: async_gpio_input_handler.rs  main.rs  oled_handler.rs  server_handler.rs  websocket_client.rs  websocket_handler.rs
server/: Cargo.toml
server/src/: client_factory.rs  client_handler.rs  main.rs  mqtt.rs  server.rs  subscriber.rs  ws_factory.rs
server/src/sequencer/: mod.rs  sequence_parser.rs
server/src/sequencer/sequence_examples/: example_api.yaml  show.yaml
server/src/services/: mod.rs  service.rs  sound_streamers.rs  text.rs  text_streamers.rs
server/src/test/: fake_subscriber.rs  mod.rs
src/: main.rs
web-ui/: .gitignore  Cargo.toml  Dioxus.toml  tailwind.config.js
web-ui/assets/: input.css
web-ui/src/: main.rs  midi_processor.rs  websocket.rs
