[package]
name = "lamarrs-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.30"
futures-util = "0.3.30"
inquire = "0.9.1"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
tokio = { version="1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tungstenite = "0.28.0"
url = "2.5.0"
lamarrs-utils = { path = "../lamarrs-utils" }
arrayvec = { version = "0.7.4", features = ["serde"] }
serde_json = "1.0.117"
serde = "1.0.202"
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6.5"
tracing = "0.1.41"
async-time-mock-tokio = "0.1.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
http = "1.3.1"
uuid = { version = "1.18.1", features = ["v4"] }
heapless = "0.9.1"
rodio = { version = "0.21.0" }
postcard = "1.1.3"
midir = "0.10.3"
midly = "0.5.3"
