[package]
name = "lamarrs-utils"
version = "0.1.0"
edition = "2021"
publish = [""]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.59"
futures-channel = "0.3.30"
futures-util = "0.3.30"
strum = "0.26.2"
strum_macros = "0.26.2"
url = "2.5.0"
arrayvec = { version = "0.7.4", features = ["serde"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tracing = "0.1.40"
uuid = { version = "^1.8.0", features = ["serde", "v4"] }
oxisynth = "0.0.5"