[package]
name = "lamarrs-utils"
version = "0.1.0"
edition = "2021"
publish = [""]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
strum_macros = { version = "0.27.2", default-features = false, features = [] }
serde = { version = "1.0.202", default-features = false, features = ["derive"] }
uuid = { version = "1.18.1", default-features = false, features = ["serde"]}
#oxisynth = "0.1.0" We won´t be supporting MIDI by now.
heapless = "0.9.1"