[package]
name = "lamarrs-orchestrator"
version = "0.1.0"
edition = "2021"
publish = [""]

[dependencies]
inquire = "0.7.5"
strum = { version = "0.26.2", features = ["derive"] }
lamarrs-utils = { path = "../lamarrs-utils" }
arrayvec = { version = "0.7.4", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rumqttc = "0.24.0"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "tracing"] }
