[package]
name = "lamarrs-orchestrator"
version = "0.1.0"
edition = "2021"
publish = [""]

[dependencies]
inquire = "0.9.1"
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
strum_macros = { version = "0.27.2", default-features = false, features = [] }
lamarrs-utils = { path = "../lamarrs-utils" }
arrayvec = { version = "0.7.4", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
rumqttc = "0.25.0"
serde_json = "1.0.117"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "tracing"] }
rand = "0.9.2"
lipsum = "0.9.1"
heapless = "0.9.1"
midir = "0.10.3"
