[package]
name = "lamarrs-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.30"
futures-util = "0.3.30"
inquire = "0.9.1"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
tokio = { version="1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features=["native-tls"] }
tungstenite = "0.28.0"
url = "2.5.0"
lamarrs-utils = { path = "../lamarrs-utils" }
serde_json = "1.0.117"
arrayvec = { version = "0.7.4", features = ["serde"] }
arraystring = "0.3.0"
uuid = "1.8.0"
async-time-mock-tokio = { version = "0.1.1", features = ["mock"] }
test-log = { version = "0.2.16", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
rumqttc = "0.25.0"
serde = { version = "1.0.203", features = ["derive"] }
oxisynth = "0.1.0"
color-eyre = "0.6.5"
heapless = { version = "0.9.1"}
