[package]
name = "web-ui"
version = "0.1.0"
authors = ["Martin Gonzalez Perna <mgonzalezperna@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
reqwest-websocket = "0.3.0"
reqwest = "0.12.5"
futures = "0.3.30"
futures-util = "0.3.30"
lamarrs-utils = { path = "../lamarrs-utils" }
strum = { version = "0.26.2", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
serde_json = "1.0.117"
getrandom = { version = "0.2.15", features = ["js"] }
wasm-logger = "0.2.0"
log = "0.4.21"
wasm-bindgen-futures = "0.4.42"
reqwasm = "0.5.0"
manganis = "0.2.2"
